[Fix] Overflow x body

--- a/resources/styles/_reset.scss
+++ b/resources/styles/_reset.scss
@@ -12,6 +12,7 @@ html{
 body{
   margin: 0 !important;
   padding: 0;
+  overflow-x: hidden;
 }
 blockquote,
 dl,
